--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng-angular-popup": "^0.2.0",
     "ng-toast": "^2.0.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-print": "^1.3.1",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
