--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@clementvh/angular-popup": "^1.1.0",
+    "@costlydeveloper/ngx-awesome-popup": "^3.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
@@ -29,6 +30,7 @@
     "ng-angular-popup": "^0.2.0",
     "ng-toast": "^2.0.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-bootstrap-confirm": "^4.0.3",
     "ngx-print": "^1.3.1",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
